--- a/style/style.css
+++ b/style/style.css
@@ -74,9 +74,33 @@ h1{
     font-size: 2.5rem ;
     margin-bottom: 0;
 }
-h2{
-    font-size: 2rem;
-}
 
 
 /* SECTION2 */
+
+h2{
+    font-size: 2rem;
+    justify-content: center;
+    display: flex;
+    color: rgb(44, 62, 80);
+}
+#section2{
+    height:28rem ;
+}
+#section2 div:nth-of-type(2){
+    display: flex;
+    justify-content: center;
+}
+#section2img{
+    display: flex;
+    flex-wrap: wrap;
+    height: 23rem;
+    width: 50rem;
+    justify-content: center;
+}
+#section2img>div>img{
+    height: 10rem;
+    width: 14rem;
+    margin: 1rem;
+    border-radius: 10px;
+}
