--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ header>div>ul{
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 4rem;
 }
 #section1>div{
     display: flex;
@@ -77,7 +78,9 @@ h1{
 
 
 /* SECTION2 */
-
+#section2>div>h2{
+    margin-bottom: 0;
+}
 h2{
     font-size: 2rem;
     justify-content: center;
