--- a/style/style.css
+++ b/style/style.css
@@ -107,3 +107,23 @@ h2{
     margin: 1rem;
     border-radius: 10px;
 }
+
+/* SECTION3 */
+section:nth-of-type(3){
+    background-color: rgb(220, 53, 69);
+    height: 20rem;
+}
+section:nth-of-type(3) h2{
+    color: white;
+}
+section:nth-of-type(3) p{
+    color: white;
+    font-size: 12px;
+}
+section:nth-of-type(3)>div:nth-of-type(2){
+    display: flex;
+    justify-content: center;
+}
+section:nth-of-type(3)>div:nth-of-type(2)>div{
+    width: 15rem;
+}
