--- a/style/style.css
+++ b/style/style.css
@@ -115,15 +115,27 @@ section:nth-of-type(3){
 }
 section:nth-of-type(3) h2{
     color: white;
+    padding-top: 2.8rem;
+    margin-bottom: 0;
 }
 section:nth-of-type(3) p{
     color: white;
-    font-size: 12px;
+    font-size: 13px;
+    display: flex;
+    align-self: center;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-family:Lato;
+    line-height: 150%;
+    width: 14rem;
+    
 }
+
 section:nth-of-type(3)>div:nth-of-type(2){
     display: flex;
     justify-content: center;
+    height: 10rem;
 }
 section:nth-of-type(3)>div:nth-of-type(2)>div{
-    width: 15rem;
+    /* width: 17.5rem; */
 }
