--- a/style/style.css
+++ b/style/style.css
@@ -123,12 +123,10 @@ section:nth-of-type(3) p{
     font-size: 13px;
     display: flex;
     align-self: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding: 1rem;
     font-family:Lato;
     line-height: 150%;
     width: 14rem;
-    
 }
 
 section:nth-of-type(3)>div:nth-of-type(2){
