--- a/style/style.css
+++ b/style/style.css
@@ -134,6 +134,42 @@ section:nth-of-type(3)>div:nth-of-type(2){
     justify-content: center;
     height: 10rem;
 }
-section:nth-of-type(3)>div:nth-of-type(2)>div{
-    /* width: 17.5rem; */
+
+
+/* FOOTER */
+
+footer{
+    background-color: rgb(44, 62, 80);
+}
+footer p{
+    color: white;
+}
+h4{
+    color: white;
+}
+
+footer>div:nth-of-type(2){
+    background-color: rgb(26, 37, 47);
+    margin: 0;
+    height: 2.5rem;
+}
+footer>div{
+    display: flex;
+    justify-content: center;
+}
+footer>div>div>div{
+    display: flex;
+    justify-content: center;
+}
+footer>div p{
+    font-size: 12px;
+}
+footer>div>div{
+    /* justify-content: center; */
+}
+footer>div:nth-of-type(1){
+    height: 14rem;
+}
+footer>div:nth-of-type(2)>p{
+    font-size: 8px;
 }
