--- a/style/style.css
+++ b/style/style.css
@@ -146,6 +146,8 @@ footer p{
 }
 h4{
     color: white;
+    text-align: center;
+    width: 100%;
 }
 
 footer>div:nth-of-type(2){
@@ -159,17 +161,31 @@ footer>div{
 }
 footer>div>div>div{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    width: auto;
 }
 footer>div p{
     font-size: 12px;
-}
-footer>div>div p{
-    justify-content: center;
+    text-align: center;
+    line-height: 150%;
 }
 footer>div:nth-of-type(1){
     height: 14rem;
+    /* padding-left: 15rem;
+    padding-right: 15rem;
+    padding-top: 3rem; */
 }
 footer>div:nth-of-type(2)>p{
     font-size: 8px;
 }
+footer>div>div{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+}
+span{
+    color:rgb(30, 188, 152);
+}
+
