--- a/style/style.css
+++ b/style/style.css
@@ -161,8 +161,9 @@ footer>div{
 }
 footer>div>div>div{
     display: flex;
-    /* justify-content: center; */
+    justify-content: space-evenly;
     width: auto;
+    font-size: 80%;
 }
 footer>div p{
     font-size: 12px;
@@ -188,4 +189,13 @@ footer>div>div{
 span{
     color:rgb(30, 188, 152);
 }
+footer i{
+    color: white;
+    justify-self: center;
+    border: solid 1px white;
+    border-radius: 50%;
+    padding: 10px;
+    height: 10px;
+    width: 10px;
 
+}
