--- a/style/style.css
+++ b/style/style.css
@@ -136,7 +136,34 @@ section:nth-of-type(3)>div:nth-of-type(2){
 }
 
 
+/* SECTION4 */
+section:nth-of-type(4){
+    height: 38rem;
+}
+section:nth-of-type(4)>div:nth-of-type(2){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+section:nth-of-type(4)>div>form>div{
+    display: flex;
+    /* flex-direction: column; */
+    justify-self: center;
+    flex-direction: column;
+    width: 100%;
+}
+section:nth-of-type(4)>div>form{
+    width: 25rem;
+    height: 25rem;
+}
+input{
+    border-style:none none solid none;
+    border-color:  rgba(0, 0, 0, 0.413);
+}
+
 /* FOOTER */
+
 
 footer{
     background-color: rgb(44, 62, 80);
@@ -197,5 +224,4 @@ footer i{
     padding: 10px;
     height: 10px;
     width: 10px;
-
 }
