--- a/style/style.css
+++ b/style/style.css
@@ -143,7 +143,7 @@ section:nth-of-type(4){
 section:nth-of-type(4)>div:nth-of-type(2){
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-self: center;
 }
 
 section:nth-of-type(4)>div>form>div{
@@ -159,7 +159,23 @@ section:nth-of-type(4)>div>form{
 }
 input{
     border-style:none none solid none;
-    border-color:  rgba(0, 0, 0, 0.413);
+    margin: 0.5rem;
+    border-bottom-width:0.5px
+}
+label{
+    margin:1rem;
+}
+#text{
+    height: 50%;
+}
+div>button{
+    color: white;
+    background-color: rgb(220, 53, 69);
+    padding: 1rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    border-radius: 10%;
+    border: none;
 }
 
 /* FOOTER */
