--- a/style/style.css
+++ b/style/style.css
@@ -26,9 +26,6 @@ header{
     display: flex;
     font-weight: bold;
 }
-img{
-    height: 10px;
-}
 header>div{
     display: flex;
     width: 49vw;
@@ -240,4 +237,31 @@ footer i{
     padding: 10px;
     height: 10px;
     width: 10px;
+}
+
+
+/* MEDIA QUERIES */
+
+@media (max-width:600px){
+    header{
+        height: 50%;
+        width: auto;
+    }
+    header>div>ul{
+        flex-direction: column;
+    }
+    #section1{
+        height: 50%;
+        width: auto;
+        margin: 0;
+    }
+    #section1>div{
+        width: auto;
+        height: auto;
+    }
+    #section1>div>img{
+        height: -50%;
+        width: auto;
+    }
+
 }
