--- a/style/style.css
+++ b/style/style.css
@@ -263,5 +263,18 @@ footer i{
         height: -50%;
         width: auto;
     }
-
+    #section2{
+        height: auto;
+    }
+    #section2>div>#section2img{
+        height: auto;
+    }   
+    #section2>div>#section2img>div>img{
+        height: 4rem;
+        width: auto;
+    }
+    section:nth-of-type(3)>div:nth-of-type(2){
+        flex-direction: column;
+        height: auto;
+    }
 }
