--- a/style/style.css
+++ b/style/style.css
@@ -263,6 +263,8 @@ footer i{
         height: -50%;
         width: auto;
     }
+
+
     #section2{
         height: auto;
     }
@@ -273,8 +275,29 @@ footer i{
         height: 4rem;
         width: auto;
     }
+
+
+    section:nth-of-type(3)>div>h2{
+        margin: 0;
+        padding: 0;
+    }
+        section:nth-of-type(3){
+        height: auto;
+        justify-content: center;
+        padding-bottom: 15px;
+        padding-top: 15px;
+
+        /* display: flex;
+        flex-direction: column; */
+    }
     section:nth-of-type(3)>div:nth-of-type(2){
         flex-direction: column;
         height: auto;
+    }
+    section:nth-of-type(3)>div:nth-of-type(2)>div>p{
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        justify-self:center;
     }
 }
