--- a/style/style.css
+++ b/style/style.css
@@ -300,4 +300,10 @@ footer i{
         padding: 0;
         justify-self:center;
     }
+    
+
+    section:nth-of-type(4)>div>div{
+        display: flex;
+        align-self:center;
+    }
 }
