--- a/style/style.css
+++ b/style/style.css
@@ -250,6 +250,8 @@ footer i{
     header>div>ul{
         flex-direction: column;
     }
+
+
     #section1{
         height: 50%;
         width: auto;
@@ -281,14 +283,11 @@ footer i{
         margin: 0;
         padding: 0;
     }
-        section:nth-of-type(3){
-        height: auto;
-        justify-content: center;
-        padding-bottom: 15px;
-        padding-top: 15px;
-
-        /* display: flex;
-        flex-direction: column; */
+    section:nth-of-type(3){
+    height: auto;
+    justify-content: center;
+    padding-bottom: 15px;
+    padding-top: 15px;
     }
     section:nth-of-type(3)>div:nth-of-type(2){
         flex-direction: column;
@@ -301,24 +300,29 @@ footer i{
         justify-self:center;
     }
 
-
+    section:nth-of-type(4){
+        height: auto;
+        padding-bottom: 10px;
+    }
     section:nth-of-type(4)>div>div{
         display: flex;
         align-self:center;
     }
     section>div:nth-of-type(2)>form>div{
         height: auto;
-        width: auto;
+        width: 20rem;
     }
     section>div:nth-of-type(2)>form{
         height: auto;
         width: auto;
     }
-    section>div:nth-of-type(2)>
 
 
     footer>div>div{
         margin: 0;
         padding: 0;
+    }
+    footer>div>div:nth-of-type(2)>div{
+        flex-wrap: wrap;
     }
 }
